# nautilus-sendto-scripts

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.README  ChangeLog.pre-1.1.4.1  MAINTAINERS  Makefile.am  Makefile.decl  NEWS  README  autogen.sh  configure.in  nautilus-sendto.1  nautilus-sendto.doap  nst.schemas.in
data/: Makefile.am  nautilus-sendto.pc.in  nautilus-sendto.ui  org.gnome.Nautilus.Sendto.gschema.xml.in  pack-entry.ui
docs/: Makefile.am
docs/nautilus-sendto/: Makefile.am  nautilus-sendto-docs.sgml
evolution/: Makefile.am  nautilus-sendto.c  org-gnome-evolution-send-attachments-to.eplug.xml  plugin.mk
gaim_plugin/: Makefile.am  nautilus-sendto-plugin.c
pidgin_plugin/: Makefile.am  nautilus-sendto-plugin.c
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  (+42 more)
src/: .cvsignore  Makefile.am  Nautilus_Sendto_Component.server.in.in  libmain.c  nautilus-nste.c  nautilus-nste.h  nautilus-sendto-command.c  nautilus-sendto-component.c  nautilus-sendto-component.h  nautilus-sendto-convert  nautilus-sendto-force.glade  nautilus-sendto-mimetype.c  nautilus-sendto-mimetype.h  nautilus-sendto-module.c  nautilus-sendto-plugin.h  nautilus-sendto.glade  nautilus-sendto.pc.in  nautilus-sendto.ui  org.gnome.Nautilus.Sendto.gschema.xml.in  test-mimetype-data  test-mimetype.c  totem-mime-types.h
src/extension/: Makefile.am  nautilus-nste.c  nautilus-sendto-module.c
src/plugins/: Makefile.am  balsa.c  bluetooth-marshal.list  bluetooth.c  e-contact-entry.c  e-contact-entry.h  empathy.c  evolution.c  gaim.c  gajim.c  nautilus-burn.c  nautilus-sendto-filelist.c  nautilus-sendto-filelist.h  nautilus-sendto-packer.c  nautilus-sendto-packer.h  nautilus-sendto-plugin.c  nautilus-sendto-plugin.h  nautilus-sendto-progress.c  nautilus-sendto-progress.h  nst-common.c  nst-common.h  nst-plugin-marshal.list  pidgin.c  sylpheed-claws.c  test-progress.c  thunderbird.c  upnp.c
src/plugins/balsa/: Makefile.am  balsa.c
src/plugins/bluetooth/: Makefile.am  bluetooth.c
src/plugins/empathy/: Makefile.am  empathy.c
src/plugins/evolution/: Makefile.am  e-contact-entry.c  e-contact-entry.h  econtactentry-marshal.list  evolution.c  evolution.nst-plugin  evolution.nst-plugin.in  evolution.plugin
src/plugins/gaim/: Makefile.am  gaim.c
src/plugins/gajim/: Makefile.am  gajim.c
src/plugins/nautilus-burn/: Makefile.am  nautilus-burn.c
src/plugins/pidgin/: Makefile.am  pidgin.c
src/plugins/removable-devices/: Makefile.am  removable-devices.c  removable-devices.nst-plugin  removable-devices.nst-plugin.in  removable-devices.plugin
src/plugins/scripts/: Makefile.am  TODO  scripts.c
src/plugins/socialweb/: Makefile.am  socialweb.c  socialweb.nst-plugin  socialweb.plugin
src/plugins/sylpheed-claws/: Makefile.am  sylpheed-claws.c
src/plugins/thunderbird/: Makefile.am  thunderbird.c
src/plugins/upnp/: Makefile.am  upnp.c
